# defi-test-task

./: README.md
task1/: Cargo.toml  Makefile  config.yaml
task1/src/: main.rs
task2/: Cargo.toml  Makefile  config.yaml  sender1.json  sender2.json
task2/src/: main.rs
task3/: Cargo.toml  Makefile  config.yaml
task3/src/: config.rs  main.rs
task4/: .gitignore  Anchor.toml  Makefile  config.yaml  package-lock.json  package.json
task4/programs/vault/: Cargo.toml
task4/programs/vault/src/: lib.rs
task4/tests/: vault.ts
task4_client/: Cargo.toml
task4_client/src/: main.rs  vault.rs
