[package]
name = "task1"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
serde_yaml = "0.9.34+deprecated"
solana-sdk = "2.2.2"
solana-client = "2.2.7"
anyhow = "1.0"
futures = "0.3.31"
