[package]
name = "task2"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-sdk = "2.2.2"
solana-client = "2.2.7"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.5.37", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
futures = "0.3.31"
