[package]
name = "task3"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
serde_yaml = "0.9.34+deprecated"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
solana-sdk = "=2.2.1"
solana-client = "=2.2.1"
clap = { version = "4.5", features = ["derive"]}
yellowstone-grpc-client = { version = "6.0.0"}
yellowstone-grpc-proto = { version = "6.0.0", features = ["default", "tonic"] }
futures-util = "0.3"
