[package]
name = "task4_client"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
signature = "2.3.0-pre.7"
base64 = "0.22.1"
sha2 = "0.11.0-pre.5"
serde_yaml = "0.9.34+deprecated"
solana-sdk = "2.2.2"
solana-client = "2.2.7"
anyhow = "1.0"
